--- a/main/talktome.html
+++ b/main/talktome.html
@@ -12,6 +12,12 @@
 
       <p>I would love to hear from you.</p>
 
+      <p>Email me at<a href="mailto:feliciaschuessler@gmail.com">visionelectricalservices@gmail.com</a></p>
+
+      <p>Message me on <a href="https://www.facebook.com/felicia.schuessler.7/?viewas=">Facebook</a></p>
+
+      <p>Connect with me on <a href="https://www.linkedin.com/in/felicia-schuessler-9913261b0/">LinkedIn</a></p>
+
     </div>
       
 <div class="buttons">
