--- a/main/talktome.html
+++ b/main/talktome.html
@@ -12,7 +12,7 @@
 
       <p>I would love to hear from you.</p>
 
-      <p>Email me at<a href="mailto:feliciaschuessler@gmail.com">visionelectricalservices@gmail.com</a></p>
+      <p>Email me at <a href="mailto:feliciaschuessler@gmail.com">feliciaschuessler@gmail.com</a></p>
 
       <p>Message me on <a href="https://www.facebook.com/felicia.schuessler.7/?viewas=">Facebook</a></p>
 
