--- a/main/speaking.html
+++ b/main/speaking.html
@@ -10,7 +10,7 @@
 
       <h1>Speaking</h1>
 
-      <p>Coming soon!</p>
+      <p class=left><a href="https://office-for-religious-life-stanford-university.simplecast.com/episodes/hope-in-disagreement">"Hope in Disagreement"</a> - Episode on "Voices of Hope," a podcast by the Stanford Office for Religious Life</p>
 
     </div>
       
